2003-06-18  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/xmlutils.py (XMLElement.addChild): replaced "__parent" 
	and "__children" with "parent" and "children"; added "removeChild".

2003-06-11  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/AE/Component.py (CascadingComponentHandler): added a
	cascading component handler.

	* pylibs/AE/Cache.py (_findPath): wrapper for vfs.FS.find_path.

2003-06-08  Jacob Smullyan  <smulloni@smullyan.org>

	* docs/manual/params.txt, docs/manual/instConfig.txt: adding BO's 
	start at the manual.

	* docs/HowToSendMail.tex: adding FT's mail documentation.

2003-06-07  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/httpd/protocol.py
	(HTTPMethodRequestParser._getEnv): removing urllib.unquote-ing
	of the requestURI, which is wrong.

2003-06-06  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/cronjob.py (CronJob.__call__): use exec rather than eval.
	(CronTab.run_jobs): ignore SIG_CHLD in child process.

2003-06-03  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/configure.in, configure: configure swcron.in.

	* SkunkWeb/Makefile.in: install swcron.

	* SkunkWeb/Services/cron.py, SkunkWeb/swcron.in: first cut at a
	cron daemon.  

	* SkunkWeb/.cvsignore: ignoring swcron.

	* pylibs/cronjob.py: module for defining and executing cron jobs.
	There also needs to be a service that defines a crontab that can
	be configured in sw.conf, and a swpython script to run the crontab 
	(standalone or from the normal cron).
	(CronLogger, CronTab): fixed typos in Logger classes (left out
	"self"), and removed user/group stuff; now keep list of children
	so they can be murdered if they straggle.

2003-05-26  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/vfs/vfs.py (LocalFS.find_path): convenience method for
	walking up the fs to find a file.

2003-05-25  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/SkunkWeb/confvars.py.in (DEFAULT_CACHE),
	SkunkWeb/Services/ae_component.py (__initConfig): default cache