@@ -1,3 +1,10 @@
+2003-06-19  Jacob Smullyan  <smulloni@smullyan.org>
+
+	* SkunkWeb/configure.in: adding firebird to list of services.
+
+	* pylibs/Firebird.py, SkunkWeb/Services/firebird.py: connection
+	cache, contributed by Brian Olsen. 
+
 2003-06-18  Jacob Smullyan  <jsmullyan@wnyc.org>
 
 	* pylibs/xmlutils.py (XMLElement.addChild): replaced "__parent" 
